--- a/views/regist_done.ejs
+++ b/views/regist_done.ejs
@@ -14,7 +14,7 @@
     <p class="regist-done-message">登録は完了です！<br>さっそくもう一度見たい映画に投票しましょう！</p>
     <img src="/images/monster_hand.png" class="regist-done-monster-hand" alt="手" width="480px">
     <div class="regist-done-btn-to-top-wrapper">
-      <a href="/home"><button class="regist-done-btn-to-top">投票に行く</a></button>
+      <a href="/"><button class="regist-done-btn-to-top">投票に行く</a></button>
     </div>
   </main>
 </body>
