--- a/views/reserve_done.ejs
+++ b/views/reserve_done.ejs
@@ -11,12 +11,41 @@
 <body class="reserve-done-wrapper">
   <h1><a href="/">Revima</a></h1>
   <p>予約が完了しました ！<br>
-    作品 ターミナル<br>
-    日時 
+    作品: <%= info[0].title %> <br>
+    <% 
+      let months = {
+        Jan: "1", 
+        Feb: "2", 
+        Mar: "3",
+        Apr: "4", 
+        May: "5", 
+        Jun: "6", 
+        Jul: "7",
+        Aug: "8",
+        Sep: "9",
+        Oct: "10",
+        Nov: "11",
+        Dec: "12"
+      };
+      let weeks = {
+        Mon: "月", 
+        Tue: "火", 
+        Wed: "水",
+        Thu: "木", 
+        Fri: "金", 
+        Sat: "土", 
+        Sun: "日"
+      };
+      let time_box = String(info[0].start).split(' '); 
+    %>
+
+    日時: 
+    <%= time_box[3] %>/<%= months[time_box[1]] %>/<%= time_box[2] %>(<%= weeks[time_box[0]] %>)<%= String(time_box[4]).slice(0, -3) %>-
+    
   </p>
   <img src="/images/reserve_done.png">
-  <div class="regist-done-btn-wrapper"> 
-    <a href="/"><button>HOMEに戻る</button></a>
+
+  <div class="reserve-done-btn-wrapper"> 
+    <a href="/"><button class="reserve-done-btn">HOMEに戻る</button></a>
   </div>
- 
 </body>
