--- a/views/payment_info_update.ejs
+++ b/views/payment_info_update.ejs
@@ -16,17 +16,17 @@
       <div class="payment-info-update-inputnum-wrapper">
         <!-- 番号を4つに分ける -->
         <% let creditnums = creditinfo[0].creditnumber.match(/.{4}/g); %>
-        <input type="tel" maxlength="4" value="<%= creditnums[0] %>" name="creditnum"> 
+        <input type="tel" maxlength="4" value="<%= creditnums[0] %>" name="creditnum" required> 
         <span>-</span>
-        <input type="tel" maxlength="4" value="<%= creditnums[1] %>" name="creditnum">
+        <input type="tel" maxlength="4" value="<%= creditnums[1] %>" name="creditnum" required>
         <span>-</span>
-        <input type="tel" maxlength="4" value="<%= creditnums[2] %>" name="creditnum">
+        <input type="tel" maxlength="4" value="<%= creditnums[2] %>" name="creditnum" required>
         <span>-</span>
-        <input type="tel" maxlength="4" value="<%= creditnums[3] %>" name="creditnum">
+        <input type="tel" maxlength="4" value="<%= creditnums[3] %>" name="creditnum" required>
       </div>
 
       <h1 class="payment-info-update-name-title">クレジットカード氏名</h1>
-      <input type="text" class="payment-info-update-inputname" value="<%= creditinfo[0].name %>" name="yourname">
+      <input type="text" class="payment-info-update-inputname" value="<%= creditinfo[0].name %>" name="yourname" required>
 
       <div class="payment-info-update-contets-wrapper">
         <div>
@@ -36,7 +36,7 @@
 
         <div>
           <h1>CVV</h1>
-          <input type="tel" maxlength="3" value="<%= creditinfo[0].cvv %>" name="cvv">
+          <input type="tel" maxlength="3" value="<%= creditinfo[0].cvv %>" name="cvv" required>
         </div>
       </div>
       <input type="submit" value="支払い情報を更新する">
