--- a/views/set/header.ejs
+++ b/views/set/header.ejs
@@ -14,7 +14,7 @@
       <a href="/login" class="header-btn-login">ログイン</a>
       <a href="/regist"><p class="header-btn-vote">投票する</p></a>
     <% } else { %>
-      <a href="/mypage" class="header-profile"><img src="/usericon/usericon1.png"></a>
+      <a href="/mypage" class="header-profile"><img src="/usericon/<%= locals.userid %>.jpg"  onerror="this.src='/usericon/default.jpg';"/ alt="no pic"></a>
     <% } %>  
   </div>
 </header>
