--- a/public/css/reserve_one.css
+++ b/public/css/reserve_one.css
@@ -8,7 +8,7 @@
 }
 
 .reserve-one-selected-movie {
-  background-image: url(../images/ico_select_arrow.png);
+  background-image: url("../images/ico_select_arrow.png");
   background-repeat: no-repeat;
   background-size: 18px 8px;
   background-position: right 15px center;
@@ -16,7 +16,7 @@
   border-radius: 5px;
   cursor: pointer;
   height: 40px;
-  margin-top: 7px;
+  margin-top: 4px;
   padding-left: 13px;
   width: 100%;
 }
@@ -30,21 +30,12 @@
   margin-top: 20px;
 }
 
-.reserve-one-btn-next {
-  background-color: var(--base-yellow);
-  border-radius: 5px;
-  color: var(--base-black);
-  height: 40px;
-  margin-top: 40px;
-  text-align: center;
-  width: 100%;
-}
-
+/* 予約可能一覧 */
 .reserve-one-radio-group {
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
-  margin: 40px 0 0;
+  margin: 40px auto 0;
 }
 
 .reserve-one-input-radio-container {
@@ -53,11 +44,17 @@
   position: relative;
   width: 110px;
 }
-
+.reserve-one-input-radio-container .reserve-one-input-radio-date {
+  font-size: 18px;
+  font-weight: bold;
+  height: 1em;
+  position: absolute;
+  top: 75px;
+  width: 110px;
+}
 .reserve-one-input-radio-container input[type="radio"] {
   display: none;
 }
-
 .reserve-one-input-radio-container label {
   border: solid 1px var(--base-white);
   border-radius: 10px;
@@ -69,15 +66,6 @@
   width: 100%;
 }
 
-.reserve-one-input-radio-title {
-  display: table-cell;
-  height: 110px;
-  padding: 0 5px;
-  text-align: center;
-  vertical-align: middle;
-  width: 110px;
-}
-
 .reserve-one-input-radio-container input[type="radio"]:checked+label {
   background-color: var(--base-white);
   color: var(--base-black);
@@ -87,15 +75,17 @@
   color: var(--base-black);
 }
 
+/* 販売中 */
 .reserve-one-input-radio-order {
   color: #669B9E;
+  font-size: 12px;
   height: 1em;
+  margin-top: 7px;
   position: absolute;
   text-align: center;
   top: 15px;
   width: 110px;
 }
-
 .reserve-one-input-radio-order::before {
   background-color: #669B9E;
   border-radius: 8px;
@@ -106,11 +96,28 @@
   width: 13px;
 }
 
-.reserve-one-input-radio-container .reserve-one-input-radio-date {
-  font-size: 18px;
-  font-weight: bold;
-  height: 1em;
-  position: absolute;
-  top: 75px;
+/* タイトル */
+.reserve-one-input-radio-title {
+  display: table-cell;
+  height: 100px;
+  text-align: center;
+  vertical-align: middle;
   width: 110px;
+}
+
+/* 次の画面に進むボタン */
+.reserve-one-nowstep {
+  font-family: "Lato-thin";
+  font-size: 14px;
+  margin-top: 250px;
+  text-align: center;
+}
+.reserve-one-btn-next {
+  background-color: var(--base-yellow);
+  border-radius: 5px;
+  color: var(--base-black);
+  height: 40px;
+  margin-top: 10px;
+  text-align: center;
+  width: 100%;
 }
