--- a/views/reserve_one.ejs
+++ b/views/reserve_one.ejs
@@ -9,27 +9,19 @@
 		<link rel="stylesheet" type="text/css" href="/css/reserve_one.css" />
 	</head>
 	<body>
-		<%- 
-			include("./set/header");
-		%>
+		<%- include("./set/header"); %>
 		<main class="reserve-one-whole-wrapper">
+			<!-- 作品 -->
 			<h1 class="reserve-one-title-title">タイトル</h1>
 			<select name="movie_title" class="reserve-one-selected-movie">
-				<% 
-					result[1] = result[1].reverse();
-					result[0].forEach(function (value, key) { 
-				%>
-
-				<option value="<%= value.movieid %>"><%= value.title %></option>
+				<% result[1] = result[1].reverse(); %>
+				<% result[0].forEach((value, key)=> { %>
+					<option value="<%= value.movieid %>"><%= value.title %></option>
 				<% }); %>
 			</select>
 
 			<h1 class="reserve-one-title-dat">日時</h1>
-
-			<% 
-				result[0].forEach( function (titles){
-			%>
-
+			<% result[0].forEach((titles)=> { %>
 			<div id="movie_<%= titles.movieid %>" class="reserve-one-date-container">
 				<select
 					name="movie_date"
@@ -40,8 +32,8 @@
 					<% 
 					let rows = result[1].filter(
 						value => value.movieid === value.movieid )
-						let filtered = dateFilter(rows);
-					filtered.forEach(function (value) { %>
+					let filtered = dateFilter(rows);
+					filtered.forEach((value)=> { %>
 					<option value="<%= value %>"><%= value %></option>
 					<% }) %>
 				</select>
@@ -66,10 +58,10 @@
 							value="<%=row.playid%>"
 						/>
 						<label for="radio_movie_<%= row.playid %>">
+							<p class="reserve-one-input-radio-order">販売中</p>
 							<p class="reserve-one-input-radio-title"><%= titles.title %></p>
-						<p class="reserve-one-input-radio-order">販売中</p>
-						<p class="reserve-one-input-radio-date"><%= times[0] %></p>
-					</label>
+							<p class="reserve-one-input-radio-date"><%= times[0] %></p>
+						</label>
 					</div>
 					<% }) %>
 				</group>
@@ -77,108 +69,110 @@
 			</div>
 			<% })
 			 function dateFilter(rows){
-				  let dates = rows.map( function (value) {
-			let result = getDate(value.start);
-			return result; });
-			let filtered = dates.filter(
-				function (x, i, self) { 
-					return self.indexOf(x) === i; 
+				let dates = rows.map( function (value) {
+					let result = getDate(value.start);
+					return result; 
 				});
-			return filtered;
-		 } 
-		 function getDate(start){ 
-			 let y = start.getFullYear();
-			let m = ("00" + (start.getMonth()+1)).slice(-2);
-			 let d = ("00" + start.getDate()).slice(-2);
-			  let result = y + "/" + m + "/" + d;
-			  return result; }
-			function getTime(date){ 
-				let h = ("00" + date.getHours()).slice(-2);
-				let h2 = ("00" + (date.getHours()+2)).slice(-2);
-				let i = ("00" + date.getMinutes()).slice(-2);
-				let result = [(h + ":" + i),(h2 + ":" + i)];
-			return result;
-		} %>
-		<form action="/reserve_two">
-			<button class="reserve-one-btn-next"  type="submit" method="post" name="playid" value="8">座席選択に進む</button>
-		</form>
-		</main>
-		<script>
-			window.onload = () => {
-				const select_date_container = document.getElementsByClassName(
-					"reserve-one-date-container"
-				);
-				const select_date_list = document.getElementsByClassName(
-					"reserve-one-select-date"
-				);
-				const select_group_list = document.getElementsByClassName(
-					"reserve-one-radio-group"
-				);
+				let filtered = dates.filter(
+					function (x, i, self) { 
+						return self.indexOf(x) === i; 
+					});
+				return filtered;
+				} 
+				function getDate(start){ 
+					let y = start.getFullYear();
+					let m = ("00" + (start.getMonth()+1)).slice(-2);
+					let d = ("00" + start.getDate()).slice(-2);
+					let result = y + "/" + m + "/" + d;
+					return result; }
+				function getTime(date){ 
+					let h = ("00" + date.getHours()).slice(-2);
+					let h2 = ("00" + (date.getHours()+2)).slice(-2);
+					let i = ("00" + date.getMinutes()).slice(-2);
+					let result = [(h + ":" + i),(h2 + ":" + i)];
+				return result;
+			} %>
+			<form action="/reserve_two">
+				<p class="reserve-one-nowstep">1/3</p>
+				<button class="reserve-one-btn-next"  type="submit" method="post" name="playid" value="8">座席選択に進む</button>
+			</form>
+	</main>
+<script>
+	window.onload = () => {
+		const select_date_container = document.getElementsByClassName(
+			"reserve-one-date-container"
+		);
+		const select_date_list = document.getElementsByClassName(
+			"reserve-one-select-date"
+		);
+		const select_group_list = document.getElementsByClassName(
+			"reserve-one-radio-group"
+		);
 
-				hideDate();
+		hideDate();
+		hideRadioGroup();
+		select_date_container[0].style.display = "block";
+
+		const elem_title = document.getElementsByName("movie_title").item(0);
+		let selected_playid = null;
+		let selected_input_name = null;
+
+		elem_title.onchange = function () {
+			let selectedId = elem_title.options[elem_title.selectedIndex].value;
+
+			hideDate();
+			document.getElementById("movie_" + selectedId).style.display =
+				"block";
+			Array.prototype.forEach.call(select_date_list,(elem)=>{
+				elem.selectedIndex=0;
+				hideRadioGroup()
+			})
+		};
+		Array.prototype.forEach.call(select_date_list, (elem) => {
+			elem.onchange = function () {
+				let movieId = elem_title.options[elem_title.selectedIndex].value;
+				let date = this.options[this.selectedIndex].value;
 				hideRadioGroup();
-				select_date_container[0].style.display = "block";
+				selected_input_name = "radio_movie_" + movieId + "_date_" + date;
+				document.getElementById(selected_input_name).style.display =
+					"flex";
 
-				const elem_title = document.getElementsByName("movie_title").item(0);
-				let selected_playid = null;
-				let selected_input_name = null;
-
-				elem_title.onchange = function () {
-					let selectedId = elem_title.options[elem_title.selectedIndex].value;
-
-					hideDate();
-					document.getElementById("movie_" + selectedId).style.display =
-						"block";
-					Array.prototype.forEach.call(select_date_list,(elem)=>{
-						elem.selectedIndex=0;
-						hideRadioGroup()
-					})
-				};
-				Array.prototype.forEach.call(select_date_list, (elem) => {
-					elem.onchange = function () {
-						let movieId = elem_title.options[elem_title.selectedIndex].value;
-						let date = this.options[this.selectedIndex].value;
-						hideRadioGroup();
-						selected_input_name = "radio_movie_" + movieId + "_date_" + date;
-						document.getElementById(selected_input_name).style.display =
-							"flex";
-
-						selected_playid = null;
-					};
-				});
-
-				Array.prototype.forEach.call(select_group_list, (elem) => {
-					elem.onchange = function () {
-						let radio = document.getElementsByName(elem.id);
-						let checked = null;
-						for (i = radio.length; i--; ) {
-							if (radio[i].checked) {
-								checked = radio[i].value;
-								break;
-							}
-						}
-						selected_playid = checked;
-						document.querySelector(".reserve-one-btn-next").value = selected_playid;
-					};
-				});
-
-				function hideDate() {
-					Array.prototype.forEach.call(select_date_container, (elem) => {
-						elem.style.display = "none";
-					});
-				}
-				function hideRadioGroup() {
-					Array.prototype.forEach.call(select_group_list, (elem) => {
-						elem.style.display = "none";
-					});
-				}
-
-				document.querySelector(".reserve-one-btn-next").onclick = () => {
-					if (selected_playid === null) {
-						return false;
-					}
-				};
+				selected_playid = null;
 			};
-		</script>
-	</body>
+		});
+
+		Array.prototype.forEach.call(select_group_list, (elem) => {
+			elem.onchange = function () {
+				let radio = document.getElementsByName(elem.id);
+				let checked = null;
+				for (i = radio.length; i--; ) {
+					if (radio[i].checked) {
+						checked = radio[i].value;
+						break;
+					}
+				}
+				selected_playid = checked;
+				document.querySelector(".reserve-one-btn-next").value = selected_playid;
+			};
+		});
+
+		function hideDate() {
+			Array.prototype.forEach.call(select_date_container, (elem) => {
+				elem.style.display = "none";
+			});
+		}
+		function hideRadioGroup() {
+			Array.prototype.forEach.call(select_group_list, (elem) => {
+				elem.style.display = "none";
+			});
+		}
+
+		document.querySelector(".reserve-one-btn-next").onclick = () => {
+			if (selected_playid === null) {
+				return false;
+			}
+		};
+	};
+</script>
+</body>
 </html>
